--- a/app/src/main/res/layout/item_discover_need.xml
+++ b/app/src/main/res/layout/item_discover_need.xml
@@ -135,7 +135,7 @@
                     android:id="@+id/item_discoverNeed_tv_trust"
                     android:layout_width="@dimen/dp_56"
                     android:layout_height="wrap_content"
-                    android:text="3k保证"
+                    android:text="诚信认证"
                     android:textSize="@dimen/sp_11"
                     android:textColor="@android:color/white"
                     android:background="#EA6E6D"
