--- a/app/src/main/res/layout/item_discover_supply.xml
+++ b/app/src/main/res/layout/item_discover_supply.xml
@@ -130,7 +130,7 @@
                     android:layout_width="@dimen/dp_56"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="3k保证"
+                    android:text="诚信认证"
                     android:textSize="@dimen/sp_11"
                     android:textColor="@android:color/white"
                     android:background="#EA6E6D"
