--- a/app/src/main/res/layout/activity_goods_search.xml
+++ b/app/src/main/res/layout/activity_goods_search.xml
@@ -31,7 +31,7 @@
             android:layout_centerVertical="true"
             android:background="@drawable/stroke_gray_10"
             android:layout_toRightOf="@id/at_home_search_iv_back"
-            android:layout_marginLeft="@dimen/dp_30"
+            android:layout_marginLeft="@dimen/dp_20"
             android:hint="搜索你想要的产品"
             android:textSize="@dimen/sp_15"
             android:lines="1"
@@ -48,9 +48,10 @@
 
         <TextView
             android:id="@+id/at_home_search_tv_search"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/dp_50"
+            android:layout_height="@dimen/dp_30"
             android:layout_alignParentRight="true"
+            android:gravity="center"
             android:text="搜索"
             android:textColor="@color/text6"
             android:textSize="@dimen/sp_12"
