--- a/app/src/main/res/layout/item_buy_gift.xml
+++ b/app/src/main/res/layout/item_buy_gift.xml
@@ -27,6 +27,7 @@
         android:text="手工蛋黄酥纯手工制作新加坡美作蛋糕"
         android:textSize="@dimen/sp_15"
         android:textColor="@color/text3"
+        android:layout_marginLeft="@dimen/dp_8"
         android:layout_marginTop="@dimen/dp_5"/>
 
     <TextView
@@ -34,6 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_5"
+        android:layout_marginLeft="@dimen/dp_8"
         android:text="购买礼包升级为代言人"
         android:textColor="@color/text9"
         android:textSize="@dimen/sp_13"/>
@@ -50,6 +52,7 @@
             android:text="￥1299"
             android:textStyle="bold"
             android:textSize="@dimen/sp_15"
+            android:layout_marginLeft="@dimen/dp_8"
             android:textColor="@color/app_theme"/>
 
         <Button
