--- a/app/src/main/res/layout/item_comment_img.xml
+++ b/app/src/main/res/layout/item_comment_img.xml
@@ -3,7 +3,6 @@
     android:layout_width="@dimen/dp_100"
     android:layout_height="@dimen/dp_100"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginRight="@dimen/dp_5"
     android:orientation="vertical"
     android:background="@drawable/white_conner_8">
     <com.makeramen.roundedimageview.RoundedImageView
@@ -12,5 +11,7 @@
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
         android:adjustViewBounds="true"
+        android:layout_marginRight="@dimen/dp_5"
+        android:layout_marginBottom="@dimen/dp_5"
         app:riv_corner_radius="@dimen/dp_5"/>
 </LinearLayout>
