--- a/app/src/main/res/layout/item_web_item.xml
+++ b/app/src/main/res/layout/item_web_item.xml
@@ -16,8 +16,10 @@
         android:src="@drawable/discover_img_artical1"/>
     <TextView
         android:id="@+id/item_webItem_tv_title"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/dp_240"
         android:layout_height="wrap_content"
+        android:ellipsize="marquee"
+        android:singleLine="true"
         android:layout_toRightOf="@id/iv1"
         android:layout_centerVertical="true"
         android:layout_marginLeft="@dimen/dp_12"
