修改了聊天标识

--- a/app/src/main/res/layout/activity_store_manager.xml
+++ b/app/src/main/res/layout/activity_store_manager.xml
@@ -7,13 +7,14 @@
     tools:context=".ui.StoreManagerActivity"
     android:background="@color/background">
     <include layout="@layout/title" android:id="@+id/title"/>
-    <ScrollView
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/title">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginBottom="@dimen/dp_50"
             android:orientation="vertical">
             <LinearLayout
                 android:layout_width="match_parent"
@@ -460,7 +461,7 @@
                 </android.support.v7.widget.RecyclerView>
             </LinearLayout>
         </LinearLayout>
-    </ScrollView>
+    </android.support.v4.widget.NestedScrollView>
    <Button
        android:id="@+id/ac_storeManager_btn_ruzhu"
        android:layout_width="match_parent"
