--- a/app/src/main/res/layout/activity_myorder_refund.xml
+++ b/app/src/main/res/layout/activity_myorder_refund.xml
@@ -226,8 +226,9 @@
 
                             <TextView
                                 android:id="@+id/at_myOrderRefund_tv_storeName"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:gravity="center_vertical"
                                 android:layout_gravity="center_vertical"
                                 android:layout_marginLeft="@dimen/dp_12"
                                 android:text="xxx旗舰店"
