--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -291,13 +291,32 @@
                     android:textColor="@color/white"
                     android:textSize="@dimen/sp_10" />
             </LinearLayout>
-
-            <ImageView
+            <RelativeLayout
                 android:id="@+id/fg_home_iv_message"
-                android:layout_width="@dimen/dp_22"
-                android:layout_height="@dimen/dp_22"
-                android:layout_marginLeft="@dimen/dp_10"
-                android:src="@drawable/home_message" />
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent">
+                <ImageView
+
+                    android:layout_width="@dimen/dp_22"
+                    android:layout_height="@dimen/dp_22"
+                    android:layout_marginLeft="@dimen/dp_10"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/home_message" />
+                <TextView
+                    android:visibility="visible"
+                    android:id="@+id/tv_unReadMsg"
+                    android:layout_width="@dimen/dp_20"
+                    android:layout_height="@dimen/dp_20"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="@dimen/dp_6"
+                    android:layout_marginTop="@dimen/dp_6"
+                    android:gravity="center"
+                    android:textSize="@dimen/sp_12"
+                    android:textColor="@color/white"
+                    android:text="20"
+                    android:background="@drawable/red_conner"/>
+            </RelativeLayout>
+
         </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
