--- a/app/src/main/res/layout/fragment_shoppingcart.xml
+++ b/app/src/main/res/layout/fragment_shoppingcart.xml
@@ -23,24 +23,40 @@
                 android:text="购物车"
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/sp_18" />
-
-            <ImageView
+            <RelativeLayout
                 android:id="@+id/fg_shopping_iv_message"
-                android:layout_width="@dimen/dp_22"
-                android:layout_height="@dimen/dp_22"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="@dimen/dp_10"
-                android:src="@drawable/home_message" />
-
+                android:layout_width="@dimen/dp_50"
+                android:layout_height="@dimen/dp_50"
+                android:layout_alignParentRight="true">
+                <ImageView
+                    android:layout_width="@dimen/dp_22"
+                    android:layout_height="@dimen/dp_22"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="@dimen/dp_10"
+                    android:layout_alignParentRight="true"
+                    android:src="@drawable/home_message" />
+                <TextView
+                    android:visibility="visible"
+                    android:id="@+id/tv_unReadMsg"
+                    android:layout_width="@dimen/dp_20"
+                    android:layout_height="@dimen/dp_20"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="@dimen/dp_2"
+                    android:layout_marginTop="@dimen/dp_6"
+                    android:gravity="center"
+                    android:textSize="@dimen/sp_12"
+                    android:textColor="@color/white"
+                    android:text="20"
+                    android:background="@drawable/red_conner"/>
+            </RelativeLayout>
             <TextView
                 android:id="@+id/tv_titlebar_right"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/dp_50"
+                android:layout_height="@dimen/dp_50"
                 android:layout_centerVertical="true"
-                android:layout_marginRight="@dimen/dp_15"
                 android:layout_toLeftOf="@id/fg_shopping_iv_message"
                 android:text="编辑"
+                android:gravity="center"
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/sp_15" />
         </RelativeLayout>
