--- a/app/src/main/res/layout/item_custom_comment.xml
+++ b/app/src/main/res/layout/item_custom_comment.xml
@@ -78,7 +78,16 @@
         android:layout_alignLeft="@id/item_comment_ll_star"
         android:layout_marginRight="@dimen/dp_12"
         android:layout_below="@id/item_comment_tv_content"/>
-    <LinearLayout
+    <android.support.v7.widget.RecyclerView
+        android:visibility="gone"
+        android:layout_marginTop="@dimen/dp_5"
+        android:id="@+id/item_custom_comment_rv1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@id/item_comment_ll_star"
+        android:layout_marginRight="@dimen/dp_12"
+        android:layout_below="@id/item_custom_comment_rv"/>
+    <!--<LinearLayout
         android:visibility="gone"
         android:layout_marginTop="@dimen/dp_5"
         android:id="@+id/item_custom_zp"
@@ -112,7 +121,7 @@
             android:layout_height="wrap_content"
             android:layout_alignLeft="@id/item_comment_ll_star"
             android:layout_marginRight="@dimen/dp_12"/>
-    </LinearLayout>
+    </LinearLayout>-->
     <TextView
         android:id="@+id/item_comment_tv_date"
         android:layout_width="wrap_content"
