--- a/app/src/main/res/layout/item_store_goods_bill.xml
+++ b/app/src/main/res/layout/item_store_goods_bill.xml
@@ -184,6 +184,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <TextView
+                android:id="@+id/item_storeGoodsBill_tv_hint"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_toLeftOf="@id/item_storeGoodsBill_tv_time"
