发现供应商品分页加载

--- a/app/src/main/res/layout/fragment_shoppingcart.xml
+++ b/app/src/main/res/layout/fragment_shoppingcart.xml
@@ -36,7 +36,7 @@
                     android:layout_alignParentRight="true"
                     android:src="@drawable/home_message" />
                 <TextView
-                    android:visibility="visible"
+                    android:visibility="gone"
                     android:id="@+id/tv_unReadMsg"
                     android:layout_width="@dimen/dp_20"
                     android:layout_height="@dimen/dp_20"
