--- a/app/src/main/res/layout/activity_user_msg.xml
+++ b/app/src/main/res/layout/activity_user_msg.xml
@@ -23,6 +23,7 @@
                 android:orientation="vertical">
 
                 <LinearLayout
+                    android:visibility="visible"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/dp_123"
                     android:background="@drawable/mine_title_gb"
@@ -446,25 +447,29 @@
                                 android:textColor="@color/text6"
                                 android:textSize="@dimen/sp_13" />
 
-                            <TextView
-                                android:id="@+id/ac_userMsg_tv_sellSort"
+                            <LinearLayout
+                                android:id="@+id/ac_userMsg_ll_sellSort"
                                 android:layout_width="@dimen/dp_0"
                                 android:layout_height="match_parent"
-                                android:layout_weight="1"
                                 android:gravity="center"
-                                android:text="销量"
-                                android:textColor="@color/text6"
-                                android:textSize="@dimen/sp_13" />
-
-                            <TextView
-                                android:id="@+id/ac_userMsg_tv_priceSort"
-                                android:layout_width="@dimen/dp_0"
-                                android:layout_height="match_parent"
-                                android:layout_weight="1"
-                                android:gravity="center"
-                                android:text="价格"
-                                android:textColor="@color/text6"
-                                android:textSize="@dimen/sp_13" />
+                                android:layout_weight="1">
+                                <TextView
+                                    android:id="@+id/ac_userMsg_tv_sellSort"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="match_parent"
+                                    android:gravity="center"
+                                    android:text="销量"
+                                    android:textColor="@color/text6"
+                                    android:textSize="@dimen/sp_13" />
+                                <ImageView
+                                    android:id="@+id/ac_userMsg_iv_sellSort"
+                                    android:layout_width="@dimen/dp_15"
+                                    android:layout_height="@dimen/dp_22"
+                                    android:src="@drawable/unselect"
+                                    android:layout_centerInParent="true"
+                                    android:layout_toRightOf="@id/ac_store_tv_saleNum"
+                                    android:layout_marginLeft="@dimen/dp_5"/>
+                            </LinearLayout>
                         </LinearLayout>
 
                         <ImageView
