--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -303,7 +303,7 @@
                     android:layout_centerVertical="true"
                     android:src="@drawable/home_message" />
                 <TextView
-                    android:visibility="visible"
+                    android:visibility="gone"
                     android:id="@+id/tv_unReadMsg"
                     android:layout_width="@dimen/dp_20"
                     android:layout_height="@dimen/dp_20"
@@ -313,7 +313,7 @@
                     android:gravity="center"
                     android:textSize="@dimen/sp_12"
                     android:textColor="@color/white"
-                    android:text="20"
+                    android:text="⋯"
                     android:background="@drawable/red_conner"/>
             </RelativeLayout>
 
